tests/snapshots/run_wpt_conformance__coreml_cast_float16_4D_tensor_to_int32.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cast.https.any.js cast float16 4D tensor to int32, coreml
 cast :: cast float16 4D tensor to int32: index 0: actual=1078370304 expected=3 tolerance=0
  inputs: castInput: [3.103515625, 32.40625, 62.15625, 51.75, 87.0625, 106.25, 125.375, 112.9375, 70.8125, 39.1875, 10.3515625, 21.234375, 99.75, 16.125, 115.625, 66, 49.375, 115.75, 77, 57.15625, 61.6875, 12.9296875, 101.25, 123.9375]
  expected castOutput: [3, 32, 62, 51, 87, 106, 125, 112, 70, 39 ...] (len=24)
  actual castOutput: [1078370304, 1107402752, 1115201536, 1112473600, 1118707712, 1121222656, 1123729408, 1122099200, 1116577792, 1109180416 ...] (len=24)
  expected castOutput full nd:
[3, 32, 62, 51, 87, 106, 125, 112, 70, 39, ...] (len=24, shape=[2, 2, 2, 3])
  actual castOutput full nd:
[1078370304, 1107402752, 1115201536, 1112473600, 1118707712, 1121222656, 1123729408, 1122099200, 1116577792, 1109180416, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    castInput: f16[2, 2, 2, 3];
  }

  nodes {
    [castOutput] = cast(castInput, label="");
  }

  outputs { castOutput; }
}
