tests/snapshots/run_wpt_conformance__coreml_cast_float32_4D_tensor_to_int8.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cast.https.any.js cast float32 4D tensor to int8, coreml
 cast :: cast float32 4D tensor to int8: index 0: actual=0 expected=102 tolerance=0
  inputs: castInput: [102.1578369140625, 43.60371780395508, 52.84621810913086, 99.9583511352539, 6.729493141174316, 92.6615753173828, 10.377813339233398, 106.65289306640624, 7.126272678375244, 91.51563262939452, 50.87134552001953, 83.38890075683594, 72.9759750366211, 31.015382766723633, 79.94034576416016, 41.844703674316406, 35.727149963378906, 2.614182949066162, 96.05252838134766, 86.76212310791016, 27.49382972717285, 23.836687088012695, 70.77123260498047, 83.8347396850586]
  expected castOutput: [102, 43, 52, 99, 6, 92, 10, 106, 7, 91 ...] (len=24)
  actual castOutput: [0, 0, -52, 66, 0, 0, 44, 66, 0, 0 ...] (len=24)
  expected castOutput full nd:
[102, 43, 52, 99, 6, 92, 10, 106, 7, 91, ...] (len=24, shape=[2, 2, 2, 3])
  actual castOutput full nd:
[0, 0, -52, 66, 0, 0, 44, 66, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    castInput: f32[2, 2, 2, 3];
  }

  nodes {
    [castOutput] = cast(castInput, label="");
  }

  outputs { castOutput; }
}
E5RT encountered an STL exception. msg = No OperationBuilder in this Block produces output castInput..
